# easyExampleLib

./: README.md  pyproject.toml
Example1/: interface.py  model.py
Example1/Interfaces/: __init__.py  interface1.py
easyExampleApp/: PyQmlProxy.py  QtInterface.py
easyExampleApp/DisplayModels/: DisplayModels.py
easyExampleLib/: interface.py  model.py
easyExampleLib/Calculators/: calculator1.py  calculator2.py
easyExampleLib/Interfaces/: __init__.py  interface1.py  interface2.py  interfaceTemplate.py
