# POETRY CONFIG

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "easyExampleLib"
version = "0.0.1"
description = "Advanced example of easyScience library"
license = "GPL-3.0-only"
authors = ["Andrew Sazonov", "Simon Ward"]
readme = "README.md"
homepage = "https://github.com/easyScience/easyExampleLib"
documentation = "https://github.com/easyScience/easyExampleLib"
include = ["CHANGELOG.md"]
packages = [ { include = "easyExampleLib" } ]

[tool.poetry.dependencies]
python = '^3.7, <3.9'
#python = "^3.8, <3.9" # "^3.8" generates error when installing PySide2 in easyAppGui

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# CUSTOM CONFIG
